# Drone

./: .gitmodules  CMakeLists.txt  README.md
dataFiles/moduleTests/: AllKalmanUnitTest.m  AltitudeMesure.txt  GererateDataForKalmanFiltration.m  GererateDataForStepingMeanFiltration.m  KalmanUnitIncludeTest.m  KalmanUnitTest.m  dataForKalmanModuleTest.txt  dataForKalmanModuleTestExpectedAngles.txt  dataForKalmanModuleTestWithNoise.txt
dataFiles/moduleTests/altitudeMesurements/: data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  flydata1.txt  flydata2.txt  flydata5.txt  measureH2.txt  measureH3.txt  measureH5.txt
dataFiles/simulator/: akcelerometerAndGyroskopeMesurements.txt
moduleTests/: CMakeLists.txt  Models.cpp  Models.hh
moduleTests/Filtration/: AHRS_test.cpp  AltitudeFiltration_test.cpp  ComplementaryFilter_test.cpp  FilterCombination_test.cpp  StepinMeanFilter_test.cpp  kalman_test.cpp
moduleTests/PID/: PID_axisHmodel.cpp  PID_measurementsAxisH.cpp  simpleInercion_test.cpp
simulator/: CMakeLists.txt  DroneVisualisation.cpp  DroneVisualisation.h  KeyboardInterpreter.cpp  KeyboardInterpreter.h  main.cpp
simulator/Drivers/: IMUsensor_simulator.cpp  IMUsensor_simulator.hh  Memory_simulator.cpp  Memory_simulator.hh  Radio_simulator.cpp  Radio_simulator.hh
src/: GPIOconf.hh  src.cmake
src/algoritms/: AHRS.cpp  AHRS.hh  AltitudeProvider.cpp  AltitudeProvider.hh  ComplementaryFilter.cpp  EngineControlIfc.hh  Kalman.cpp  Kalman.hh  OctoEngineControl.cpp  OctoEngineControl.hh  PID.cpp  PID.hh  QuatroEngineControl.cpp  QuatroEngineControl.hh  StepingMeanFilter.cpp  StepingMeanFilter.hh
src/common/: ADC.hh  BatteryObserver.cpp  BatteryObserver.hh  EngineIfc.hh  MeasurementManager.cpp  MeasurementManager.hh  MiniDronEngine.cpp  MiniDronEngine.hh  esdStructure.cpp  esdStructure.hh  memoryMap.hh
src/mainDependencies/: globalClass.hh  processRadioData.cpp  processRadioData.hh  secondMain.cpp  secondMain.hh
src/mainExecutonBlock/: EnginePercentValue.cpp  EnginePercentValue.hh  FlyTrybeWithAltitude.cpp  FlyTrybeWithAltitude.hh  PIDofAxisXandY.cpp  PIDofAxisXandY.hh  TrybeTools.cpp  TrybeTools.hh  flyWithAltitudePID.cpp  flyWithAltitudePID.hh  mainFlyTrybe.cpp  mainFlyTrybe.hh  recognizeEngines.cpp  recognizeEngines.hh  tuneAxisTrybe.cpp  tuneAxisTrybe.hh
uartApp/: CMakeLists.txt  main.cpp
uartApp/inc/: consoleOptions.hh  toggleOnUserInput.hh  uart.hh
uartApp/matlab/: Load_data_to_matlab_env.m
uartApp/src/: consoleOptions.cpp  toggleOnUserInput.cpp  uart.cpp
unitTests/: CMakeLists.txt  src.cmake
unitTests/mocks/: TestBarometer.hh  TestBatteryObserver.cpp  TestBatteryObserver.hh  TestEngine.cpp  TestEngine.hh  TestGPIO.cpp  TestGPIO.hh  TestI2C.cpp  TestI2C.hh  TestIMUsensor.cpp  TestIMUsensor.hh  TestMemory.cpp  TestMemory.hh  TestRadio.cpp  TestRadio.hh  TestRadioParser.cpp  TestRadioParser.hh
unitTests/src/: secondMain_test.cpp
unitTests/src/algoritms/: AltitudeProvider_test.cpp  ComplementaryFilter_test.cpp  EngineControl_test.cpp  Kalman_test.cpp  Matrix.hh  PID_test.cpp  StepingMeanFilter_test.cpp  SumUpDataContainer.hh  VarianceProvider.hh
unitTests/src/common/: BatteryObserver_test.cpp  MeasurementManager_test.cpp  MiniDronEngine_test.cpp  esdStructure_test.cpp
unitTests/src/mainExecutonBlock/: mainFlyTrybe_test.cpp
